--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
     "lucide-react": "^0.525.0",
-    "next": "15.3.4",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "pg": "^8.17.2",
     "react": "^19.0.0",
@@ -46,7 +46,7 @@
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
